feat: Release v1.2 with WPF UI overhaul, tray icon, and improved UX

--- a/rideboard/widget/RideBoard.Widget.csproj
+++ b/rideboard/widget/RideBoard.Widget.csproj
@@ -8,5 +8,10 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <ApplicationIcon></ApplicationIcon>
   </PropertyGroup>
+  <ItemGroup>
+    <Content Include="Assets\**">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 </Project>
 
