--- a/rideboard/widget/RideBoard.Widget.csproj
+++ b/rideboard/widget/RideBoard.Widget.csproj
@@ -7,6 +7,9 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <ApplicationIcon></ApplicationIcon>
+    <Version>1.2.2</Version>
+    <AssemblyVersion>1.2.2.0</AssemblyVersion>
+    <FileVersion>1.2.2.0</FileVersion>
   </PropertyGroup>
   <ItemGroup>
     <Content Include="Assets\**">
