fix: embed fonts as resources to ensure they load in packaged app

--- a/rideboard/widget/RideBoard.Widget.csproj
+++ b/rideboard/widget/RideBoard.Widget.csproj
@@ -12,9 +12,7 @@
     <FileVersion>1.2.3.1</FileVersion>
   </PropertyGroup>
   <ItemGroup>
-    <Content Include="Assets\**">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
+    <Resource Include="Assets\**" />
   </ItemGroup>
 </Project>
 
